Crisalix - Jobs: Deep Learning Engineer - Apply online. Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online. Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online. Job Application for  Research Intern for Deep Reinforcement Learning at Samsung Research America Internship. Plumerai - Jobs: Deep Learning Engineer - Apply online. Plumerai - Jobs: Deep Learning Scientist - Apply online. Plumerai - Jobs: Deep Learning Scientist - Apply online. Plumerai - Jobs: Deep Learning Engineer - Apply online. Crisalix - Jobs: Senior iOS App Developer + Deep Learning .... Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters. Job Application for Artificial Intelligence Researcher I Deep Reinforcement Learning at Path Robotics. Deep Learning Data Scientist ($300k - $500k) | Averity. Plumerai - Jobs: Deep Learning Engineer - Apply online. Bosch Group Internship Deep Learning For The Dynamic Object Detection For Autonomous  Driving | SmartRecruiters. Job Application for Sr. Software Engineer, AI and Deep Learning at Sony Interactive Entertainment PlayStation. Job Application for Deep Learning Engineer - AI Research at AlphaSense. Run:AI Senior Back End Engineer (Deep Learning infrastructure) | SmartRecruiters. Run:AI Senior C++ Software Engineer (Deep Learning optimization engine) | SmartRecruiters. Phrasee - QA Tester (AI, NLG, Deep Learning). Forethought - ML Engineer, Deep Learning &amp; NLP. PDFTron Systems Inc. - Jobs: Deep Learning Developer - Apply online.       Senior Backend Development position (Python) | Deep-learning Healthcare start-up | Amsterdam - Indigo     . Deep Learning Engineer - WWFO. Bosch Group Thesis in the field of Deep Learning for Autonomous Driving | SmartRecruiters. Job Application for WellSaid Labs Deep Learning Engineer at The Allen Institute for Artificial Intelligence. Job Application for  Deep Learning Engineer at A³ by Airbu

--- a/deep-learning.html
+++ b/deep-learning.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamericainternship/jobs/4284633002'>Job Application for  Research Intern for Deep Reinforcement Learning at Samsung Research America Internship</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamericainternship/jobs/4284633002'>Job Application for  Research Intern for Deep Reinforcement Learning at Samsung Research America Internship</a></h5> 
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -131,7 +131,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">Amsterdam Amsterdam</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Engineer---WWFO_JR1923118'>Deep Learning Engineer - WWFO</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... ... artificial intelligence and self-driving cars. Learn more about NVIDIA. Solutions 
 Architect - WWFO | US, CA, Santa Clara ? Solution Architect - WWFO | US, CA,?...</p>
@@ -157,11 +157,11 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Deep Learning &amp; Algorithms)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oAFT7fwZ'>Samsung Semiconductor, Inc. Careers - Deep Learning Research Engineer (Deep Learning &amp; Algorithms)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -169,7 +169,7 @@ Learning team. Academic and commercial groups around the world are using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Hardware Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oUPW7fww'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Sr Hardware Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
@@ -202,13 +202,13 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---Palo-Alto/Summer-2019-Intern---Deep-Learning-Research_JR20931'>2019 Intern - Deep Learning Research</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://salesforce.wd1.myworkdayjobs.com/en-US/External_Career_Site/job/California---Palo-Alto/Summer-2019-Intern---Deep-Learning-Research_JR20931'>2019 Intern - Deep Learning Research</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>15 hours ago ... deep learning, - machine learning, - natural language processing, - computer 
 vision, or - reinforcement learning. Applied to, for example: text categorization, 
 text?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/enlitic/2240ad0c-3b69-4a74-adc2-1273df00dc67'>Enlitic - Deep Learning Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/enlitic/2240ad0c-3b69-4a74-adc2-1273df00dc67'>Enlitic - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
@@ -265,7 +265,7 @@ daytime?...</p>
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-06-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/ojwP9fwx'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-05</p>
 <hr/>
@@ -289,7 +289,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-06-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oA4cafwK'>Samsung Semiconductor, Inc. Careers - Advanced Neural Processor Lab - Deep Learning Hardware Architect</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-05-30</p>
 <hr/>
@@ -443,11 +443,11 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://www.datarobot.com/careers/job/1615743/'>Deep Learning Engineer, Core Modeling in Singapore | Open position | DataRobot</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.datarobot.com/careers/job/1615743/'>Deep Learning Engineer, Core Modeling in Singapore | Open position | DataRobot</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://yoti.workable.com/j/526C903A57'>Yoti - Jobs: Research Scientist - Deep Learning - Apply online</a></h5> 
+<h5><a href='https://yoti.workable.com/j/526C903A57'>Yoti - Jobs: Research Scientist - Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
